@@ -1134,6 +1134,28 @@ namespace mscl
         m_scaling = resolution / mPerRev;
     }
 
+    GpioConfiguration GpioConfiguration::fromCommandResponse(const MipFieldValues& responseValues, uint8 startIndex)
+    {
+        GpioConfiguration config;
+        config.pin = responseValues[startIndex].as_uint8();
+        config.feature = static_cast<GpioConfiguration::Feature>(responseValues[startIndex + 1].as_uint8());
+        config.behavior = responseValues[startIndex + 2].as_uint8();
+        config.pinModeValue(responseValues[startIndex + 3].as_uint8());
+
+        // for UART feature the behavior is formatted:
+        //  - first four bits is port # (0 can be used when setting to indicate default)
+        //  - second four bits is behavior
+        // so 0x21 is transmit over port 2
+        // current devices only support one port per pin so we don't need to worry about the port number
+        // strip it from the value for simplicity
+        if (config.feature == UART_FEATURE)
+        {
+            config.behavior = config.behavior & 0x0F;
+        }
+
+        return config;
+    }
+
     void EventTriggerThresholdParameter::channel(const MipTypes::ChannelField channelField,
         const MipTypes::ChannelQualifier channelQualifier)
     {
