@@ -24,6 +24,7 @@ Forthcoming
         - Added max configurations count
         - Made supportedDataClasses() public
     - Added MipDataClasses as a typedef for a vector of MipTypes::DataClass
+    - Added UART feature for GPIO configuration
     - MIP Data:
         - parsing for GQ7 Continuous Built-In Test (0xA0, 0x01)
 
